data/derived/comb/progs/unify/prog2126.ml.out
Characters 38-50:
  let stringOfList f l = sepConcat "; " (List.map f);;
                                        ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string list
